examples/errors/unboundrec.scr
global protocol P(role A, role B) {
  rec X {
    Hello() from A to B;
    rec Y {
      continue Z;
    }
  }
}
